Atalizações devido á depreciação de métodos no Java 10.